# scg3

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
example/shaders/: blinn_phong_lighting.glsl  bump_frag.glsl  color_frag.glsl  gouraud_frag.glsl  phong_frag.glsl  simple_flat_frag.glsl  simple_gouraud_frag.glsl  texture2d_modulate.glsl  texture_none.glsl  toon_lighting.glsl
libscg3/: CMakeLists.txt
libscg3/doc/: scg3_minimal_example.cpp
libscg3/include/scg3/: scg_stb_image.h
libscg3/include/scg3/ext/: StereoCamera.h  StereoRendererActive.h  StereoRendererAnaglyph.h  StereoRendererPassive.h
libscg3/src/: BumpMapCore.cpp  CameraController.cpp  Composite.cpp  Controller.cpp  Core.cpp  CubeMapCore.cpp  GeometryCore.cpp  Light.cpp  MouseController.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  PreTraverser.cpp  RenderState.cpp  RenderTraverser.cpp  TextureCoreFactory.cpp  Transformation.cpp  Viewer.cpp  scg_internals.cpp  scg_stb_image.cpp
libscg3/src/ext/: StereoCamera.cpp  StereoRenderer.cpp  StereoRendererPassive.cpp
scg3/: CMakeLists.txt
scg3/doc/: scg3_table_scene_example.cpp
scg3/include/scg3/: scg3.h  scg_glew.h  scg_glm.h  scg_stb_image.h
scg3/include/scg3/ext/: StereoRenderer.h  scg3_ext.h  scg_ext_internals.h
scg3/src/: Animation.cpp  Camera.cpp  ColorCore.cpp  GeometryCoreFactory.cpp  Group.cpp  InfoTraverser.cpp  KeyboardController.cpp  Leaf.cpp  LightPosition.cpp  MaterialCore.cpp  Node.cpp  Renderer.cpp  ShaderCore.cpp  ShaderCoreFactory.cpp  Shape.cpp  StandardRenderer.cpp  Texture2DCore.cpp  TextureCore.cpp  TransformAnimation.cpp  Traverser.cpp  ViewState.cpp  scg_stb_image.cpp  scg_utilities.cpp
scg3/src/ext/: StereoRenderer.cpp  StereoRendererActive.cpp  StereoRendererAnaglyph.cpp
scg3/src/glew/: glew.c
scg3/src/glm/: glm.cpp
scg3/src/glm/detail/: glm.cpp
scg3_example/: main.cpp
